tests/paczka1/small_fuzzy/70607460.err
Error in line 5: me5F S204 60,75
Error in line 3: S272 A336 45,8
